# fragrance-cmi-consumer-insights

./: .gitattributes  .gitignore  CITATION.cff  DATA_LICENSES.md  DATA_SOURCES.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: taxonomy.json
data/: README.md
docs/: 90_day_validation_plan.md  chart_map.md  interview_story.md  label_codebook.md  methodology.md  metric_definitions.md  validation_report.md
outputs/: README.md  fragrance_cmi_weekly_tracker.xlsx
outputs/tables/: behavior_segments.csv  brand_scorecard.csv  data_quality_summary.json  need_states.csv  pain_points.csv  price_bands.csv  product_formats.csv  repurchase_intent.csv  scent_families.csv  summary_metrics.json  validation_receipt.json  weekly_tracker.csv  workbook_payload.json
reports/: README.md  consumer_insight_report.md
scripts/: clean_outputs.py  download_data.py  run_pipeline.py  validate_outputs.py
src/fragrance_cmi/: __init__.py  analysis.py  config.py  io.py  pipeline.py  report.py  taxonomy.py  visualize.py
tests/: test_analysis.py  test_pipeline.py  test_taxonomy.py
tools/: build_tracker.mjs
