[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fragrance-cmi-consumer-insights"
version = "1.0.0"
description = "A reproducible consumer and market insight workflow for fragrance reviews."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Yizhen Huang"}]
dependencies = [
  "pandas>=2.1,<4",
  "numpy>=1.26,<3",
  "matplotlib>=3.8,<4",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
